# Concurrentes

Clases 2016/: clase1.cpp  clase2.cpp
Tp1/: Informe.tex
Tp1/informe/: Modelo de negocio.odg  Modelo de procesos.odg
Tp1/sources/: Makefile  SIGINT_handler.h  call_center.cpp  call_center.h  cash_register.cpp  cash_register.h  clean.sh  concu_zappi.cpp  config.cfg  delivery.cpp  delivery.h  event_handler.h  fifo.cpp  fifo.h  kitchen.cpp  kitchen.h  lock_file.cpp  lock_file.h  locknames.h  logger.cpp  logger.h  lots_of_calls  oven_set.cpp  oven_set.h  pipe.cpp  pipe.h  pipenames.h  reader_fifo.cpp  reader_fifo.h  semaphore.cpp  semaphore.h  semaphore_names.h  shared_memory.h  shared_memory_names.h  signal_handler.cpp  signal_handler.h  supervisor.cpp  supervisor.h  times.h  writer_fifo.cpp  (+1 more)
Tp2/Informe/: Diagramas.asta  Informe.tex
Tp2/sources/: CMakeLists.txt  Makefile  Queue.h  client.cpp  client.h  constants.h  database.cpp  database.h  database_record.cpp  database_record.h  event_handler.h  lock_file.cpp  lock_file.h  locknames.h  logger.cpp  logger.h  main_client.cpp  main_server.cpp  message.cpp  message.h  queue.h  record.h  server.cpp  server.h  signal_handler.cpp  signal_handler.h
clase1/: Makefile  clase1.cpp
clase2/: Makefile  clase2.cpp  ej.txt  exec
clase3/: Makefile  main.cpp
clase4/: Makefile  enunciado.txt
clase5/: Aclaracion.txt  clase5.cpp
clase5/Ejercicio (Bruno)/: Makefile  clase5.cpp  exec
clase5/Ejercicio (Gaston)/: Makefile  clase5.cpp
clase6/: Makefile  main.cpp
